Added frames, some impromevents. See below.
- Added Frame for movie frames (photos, screenshots). This includes proper Entity, Repository, Service, Parameters, Fixtures, and Migration
- Added new route for Movie to upload mulitple frames
- Changed fixtures to have one fixed record in every table
- Added inversed sessions for Movie entity, now can see sessions for the movie
- Changed configuration for nginx (default.conf) and php (php.ini) to allow big uploads
- Minor improvements to the Auth and S3 services. This includes new UnathorizedException
- Added swager docs for Frame
- Changed deps in composer.json to be less fixed, updated some of them to the new version line
- Bumped docker images
